<resources>

    <string name="app_name">JOHNS BURGER</string>
    <string name="info_tab">INFO</string>
    <string name="menu_tab">MENU</string>
    <string name="basket_tab">BASKET</string>
    <string name="name_news">NEWS</string>
    <string name="text_news">NEWS</string>
    <string name="text_menu_MEALS">MEALS</string>
    <string name="text_menu_DRINKS">DRINKS</string>
    <string name="days_textview">DAY</string>
    <string name="textview_time_clock">CLOCK</string>
    <string name="working_time">WORKING TIME</string>
    <string name="address">Address</string>
    <string name="textLink">The link to the website</string>
    <string name="mealsAll">NAME MEALS</string>
    <string name="describeAllMenu">Describe</string>
    <string name="item_name_menu">Item NAME</string>
    <string name="CostView">cost</string>
    <string name="DescribeItem">DescribeItem</string>
    <string name="NullBasket">Our cool chefs await your order!</string>
    <string name="textViewNameItemBasket">textViewNameItemBasket</string>
    <string name="Counter">Counter</string>
    <string name="AllCost">AllCost</string>
    <string name="yourOrder">YOUR ORDER</string>
    <string name="deleteItem">DELETE</string>
    <string name="buttonBasket">TO ORDER</string>

    <string name="name">FirstName</string>
    <string name="nameA">AdressName</string>
    <string name="nameitem2">nameitem2</string>
    <string name="first_name">First name</string>
    <string name="street">Street</string>
    <string name="home">Home</string>
    <string name="kv">Kv.</string>
    <string name="name_telephone">Telephone</string>
    <string name="todo">TODO</string>
    <string name="add">+add</string>


    <string-array name="CityList">
        <item>Moscow</item>
        <item>Ivanovo</item>
        <item>Vladimir</item>
        <item>Riga</item>
    </string-array>

</resources>
