<?xml version="1.0" encoding="utf-8"?>

    <com.examle.libgo.johnsburgers.layout.ExpandCardLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        app:cardCornerRadius="2dp"
        app:cardPreventCornerOverlap="true"
        app:elevation="2dp"
        android:id="@+id/expand_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        app:expWithParentScroll="true">


        <RelativeLayout
            android:id="@+id/visible_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
            android:id="@+id/textViewCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
            android:layout_alignParentRight="true"
            android:text="@string/CostView" />

        <TextView
            android:id="@+id/textViewNameItem"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/item_name_menu"
            android:layout_marginRight="62dp"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"

            />



        <Button
            android:id="@+id/buttonItem"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:shadowRadius="3"
            android:shadowDx="2"
            android:layout_alignParentRight="true"

            android:layout_marginTop="34dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/ic_add_to_basket_e_commerce_button"

             />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView

                android:id="@+id/textViewDescribeItem"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:textColor="@color/colorWhite"
                android:text="@string/DescribeItem"
                android:textSize="12sp" />


        </LinearLayout>


    </com.examle.libgo.johnsburgers.layout.ExpandCardLayout>
