<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorWhite"
    tools:context=".presentation.activities.HeadActivity">

   <android.support.v4.widget.NestedScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       >

       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
          >


           <android.support.design.widget.TextInputLayout
        android:id="@+id/first_name"
        android:layout_marginTop="96dp"

        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:hintTextAppearance="@style/AppTheme">

        <android.support.design.widget.TextInputEditText
            android:inputType="textCapWords"
            android:id="@+id/input_first_name_text"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:hint="@string/first_name" />

    </android.support.design.widget.TextInputLayout>


           <ImageView
               android:layout_below="@+id/first_name"
               android:layout_width="24dp"
               android:layout_height="24dp"
               android:layout_marginTop="22dp"
               android:layout_marginLeft="32dp"
               android:layout_marginRight="0dp"
               android:layout_marginStart="32dp"
               android:layout_marginEnd="0dp"
               android:background="@drawable/ic_phone_black_24dp"
               />


           <android.support.design.widget.TextInputLayout
               android:layout_below="@+id/first_name"
               android:id="@+id/telephone_name"
               android:layout_marginTop="4dp"
               app:hintTextAppearance="@style/AppTheme"
               android:layout_marginLeft="60dp"
               android:layout_marginStart="60dp"
               android:layout_marginRight="32dp"
               android:layout_marginEnd="32dp"
               android:layout_width="match_parent"
               android:layout_height="48dp">



               <android.support.design.widget.TextInputEditText
                   android:inputType="textCapWords|number"
                   android:id="@+id/input_telephone_name_text"
                   android:textSize="18sp"
                   android:imeOptions="actionDone"
                   android:maxLines="1"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"

                   android:hint="@string/name_telephone" />

           </android.support.design.widget.TextInputLayout>




    <Spinner
        android:id="@+id/spinner"

        android:layout_below="@+id/telephone_name"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:entries="@array/CityList"
        android:layout_width="match_parent"
        android:layout_height="48dp" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/streetName"
        android:layout_below="@+id/spinner"
        android:layout_marginTop="8dp"
        app:hintTextAppearance="@style/AppTheme"
        android:layout_marginLeft="32dp"
        android:layout_width="120dp"
        android:layout_height="48dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textCapWords"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:hint="@string/street" />
    </android.support.design.widget.TextInputLayout>

           <android.support.design.widget.TextInputLayout
               android:id="@+id/home_name"
               android:layout_below="@+id/spinner"
               android:layout_toRightOf="@+id/streetName"
               android:layout_marginTop="8dp"
               app:hintTextAppearance="@style/AppTheme"
               android:layout_marginLeft="8dp"
               android:layout_width="56dp"
               android:layout_height="48dp">

               <android.support.design.widget.TextInputEditText
                   android:layout_width="match_parent"
                   android:imeOptions="actionNext"
                   android:inputType="number"
                   android:maxLines="1"
                   android:layout_height="match_parent"
                   android:hint="@string/home" />
           </android.support.design.widget.TextInputLayout>

           <android.support.design.widget.TextInputLayout
               android:id="@+id/office_name"
               app:hintTextAppearance="@style/AppTheme"
               android:layout_below="@+id/spinner"
               android:layout_toRightOf="@+id/home_name"
               android:layout_marginTop="8dp"
               android:layout_marginStart="8dp"
               android:layout_marginLeft="8dp"
               android:layout_marginRight="0dp"
               android:layout_marginEnd="0dp"
               android:layout_width="56dp"
               android:layout_height="48dp">

               <android.support.design.widget.TextInputEditText
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:imeOptions="actionDone"
                   android:maxLines="1"
                   android:inputType="number"
                   android:hint="@string/kv" />
           </android.support.design.widget.TextInputLayout>



       </RelativeLayout>
   </android.support.v4.widget.NestedScrollView>
</RelativeLayout>